RESOLVED FIXED191988
exitFullscreen should not instantiate a new model/interface mapping.
https://bugs.webkit.org/show_bug.cgi?id=191988
Summary exitFullscreen should not instantiate a new model/interface mapping.
Jeremy Jones
Reported 2018-11-26 16:02:16 PST
exitFullscreen should not instantiate a new model/interface mapping.
Attachments
Patch (1.81 KB, patch)
2018-11-26 16:08 PST, Jeremy Jones
no flags
Patch for landing (1.77 KB, patch)
2019-02-18 14:52 PST, Jer Noble
no flags
Jeremy Jones
Comment 1 2018-11-26 16:02:57 PST
Jeremy Jones
Comment 2 2018-11-26 16:08:03 PST
WebKit Commit Bot
Comment 3 2018-11-27 10:12:35 PST
Comment on attachment 355690 [details] Patch Rejecting attachment 355690 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 355690, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as commit-queue@webkit.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=355690&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=191988&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 355690 from bug 191988. Fetching: https://bugs.webkit.org/attachment.cgi?id=355690 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... M Source/WebKit/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebKit/ChangeLog' is out of date W: c5a3144d681ff863281241c16410fe7bfdf68b6b and refs/remotes/origin/master differ, using rebase: :040000 040000 8f13ae43b9a3c1fdc306de73966c90e77adca479 bfc2fa26c7b37ea3520ffa0f235d1a7be3453b52 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... M Source/WebKit/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebKit/ChangeLog' is out of date W: c5a3144d681ff863281241c16410fe7bfdf68b6b and refs/remotes/origin/master differ, using rebase: :040000 040000 8f13ae43b9a3c1fdc306de73966c90e77adca479 bfc2fa26c7b37ea3520ffa0f235d1a7be3453b52 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output: https://webkit-queues.webkit.org/results/10168735
Jer Noble
Comment 4 2019-02-18 14:52:13 PST
Created attachment 362340 [details] Patch for landing
WebKit Commit Bot
Comment 5 2019-02-18 15:40:49 PST
Comment on attachment 362340 [details] Patch for landing Clearing flags on attachment: 362340 Committed r241745: <https://trac.webkit.org/changeset/241745>
WebKit Commit Bot
Comment 6 2019-02-18 15:40:51 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.